--- a/members.html
+++ b/members.html
@@ -552,7 +552,8 @@
                         <h4 class="font-semibold text-sm text-blue-800 mb-1">Gowri Sankar V</h4>
                         <p class="text-xs text-blue-600">R&D Head</p>
                         <div class="social-icons">
-                            <a href="#" class="social-icon social-icon-sm" title="LinkedIn">
+                            <a href="https://www.linkedin.com/in/gowri-sankar-vijaya-kumar-646a67299" target="_blank"
+                                class="social-icon social-icon-sm" title="LinkedIn">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </div>
@@ -692,7 +693,8 @@
                         <h4 class="font-semibold text-sm text-blue-800 mb-1">Titus Paul H</h4>
                         <p class="text-xs text-blue-600">Member</p>
                         <div class="social-icons">
-                            <a href="#" class="social-icon social-icon-sm" title="LinkedIn">
+                            <a href="https://www.linkedin.com/in/titus-paul-h-398bbb367?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                                target="_blank" class="social-icon social-icon-sm" title="LinkedIn">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </div>
@@ -730,8 +732,7 @@
                         <li><a href="/index.html#gallery" class="text-blue-200 hover:text-white transition">Gallery</a>
                         </li>
                         <li><a href="/index.html#achievements"
-                                class="text-blue-200 hover:text-white transition">Achievements</a>
-                        </li>
+                                class="text-blue-200 hover:text-white transition">Achievements</a></li>
                     </ul>
                 </div>
 
@@ -754,33 +755,39 @@
                 </div>
 
                 <!-- <div>
-                    <h3 class="text-xl font-bold mb-5">Stay Updated</h3>
-                    <p class="text-blue-200 mb-5">Subscribe to our newsletter for the latest updates on events,
-                        workshops, and opportunities.</p>
-                    <div class="flex">
-                        <input type="email" placeholder="Your email address"
-                            class="px-4 py-3 rounded-l-lg text-gray-800 w-full focus:outline-none">
-                        <button class="bg-blue-800 px-4 py-3 rounded-r-lg hover:bg-blue-700 transition">
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
-                    </div>
-                </div> -->
+                <h3 class="text-xl font-bold mb-5">Stay Updated</h3>
+                <p class="text-blue-200 mb-5">Subscribe to our newsletter for the latest updates on events,
+                    workshops, and opportunities.</p>
+                <div class="flex">
+                    <input type="email" placeholder="Your email address"
+                        class="px-4 py-3 rounded-l-lg text-gray-800 w-full focus:outline-none">
+                    <button class="bg-blue-800 px-4 py-3 rounded-r-lg hover:bg-blue-700 transition">
+                        <i class="fas fa-paper-plane"></i>
+                    </button>
+                </div>
+            </div> -->
             </div>
 
-            <div class="pt-8 border-t border-blue-800 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-blue-200 mb-4 md:mb-0">
+            <!-- Social icons row -->
+            <div class="pt-8 border-t border-blue-800 flex justify-center space-x-5">
+                <a href="https://www.instagram.com/asme_srit/"
+                    class="text-blue-200 hover:text-white transition text-xl"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/asme-srit/"
+                    class="text-blue-200 hover:text-white transition text-xl"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+
+            <!-- Separate bottom copyright & dev line -->
+            <div class="pt-6 text-center">
+                <p class="text-blue-200 text-sm">
                     © <span id="currentYear"></span> ASME SRIT Student Section. All rights reserved.
                 </p>
-                <div class="flex space-x-5">
-                    <!-- <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
-                            class="fab fa-facebook-f"></i></a> -->
-                    <a href="https://www.instagram.com/asme_srit/"
-                        class="text-blue-200 hover:text-white transition text-xl"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/asme-srit/"
-                        class="text-blue-200 hover:text-white transition text-xl"><i class="fab fa-linkedin-in"></i></a>
-                    <!-- <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
-                            class="fab fa-youtube"></i></a> -->
-                </div>
+                <p class="text-blue-300 text-sm mt-2">
+                    Developed with ❤️ by
+                    <a href="https://www.linkedin.com/in/alan-s-9385a328a" target="_blank"
+                        class="underline hover:text-white">
+                        Alan S.
+                    </a>
+                </p>
             </div>
         </div>
     </footer>
