removed the chatbot viz under dev

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         </div>
                         <div>
                             <h4 class="font-bold text-xl">Ms. N. Sanjana</h4>
-                            <p class="text-gray-700">Assistant Professor, Computer Science Engineering</p>
+                            <p class="text-gray-700">Assistant Professor, Computer Science and Engineering</p>
                             <p class="text-blue-800 mt-1">sanjana.cse@sritcbe.ac.in</p>
                         </div>
                     </div>
@@ -1182,13 +1182,6 @@
                 setTimeout(() => loader.style.display = "none", 500);
             }, 1000); // 1 second delay
         });
-    </script>
-    <script type="module">
-        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
-        Chatbot.init({
-            chatflowid: "075518b6-3f8b-45eb-94b2-367a63b595d6",
-            apiHost: "https://cloud.flowiseai.com",
-        })
     </script>
 </body>
 
