--- a/members.html
+++ b/members.html
@@ -315,7 +315,9 @@
                                 class="w-full h-full object-cover rounded-full border-4 border-white shadow-md member-img">
                         </div>
                         <h4 class="text-xl font-bold text-blue-800 mb-2">Ms. N. Sanjana</h4>
-                        <p class="text-blue-600 font-medium mb-3">Assistant Professor - CSE</p>
+                        <p class="text-blue-600 font-medium mb-3">Assistant Professor<br>Department of Computer Science
+                            and Engineering
+                        </p>
                         <div class="social-icons">
                             <a href="mailto:sanjana.cse@sritcbe.ac.in" class="social-icon" title="Email">
                                 <i class="fas fa-envelope"></i>
@@ -336,7 +338,8 @@
                                 class="w-full h-full object-cover rounded-full border-4 border-white shadow-md member-img">
                         </div>
                         <h4 class="text-xl font-bold text-blue-800 mb-2">Mr. R. Immanual</h4>
-                        <p class="text-blue-600 font-medium mb-3">Assistant Professor - MECH</p>
+                        <p class="text-blue-600 font-medium mb-3">Assistant Professor<br>Department of Mechanical
+                            Engineering</p>
                         <div class="social-icons">
                             <a href="mailto:immanual.me@sritcbe.ac.in" class="social-icon" title="Email">
                                 <i class="fas fa-envelope"></i>
