--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASME SRIT Student Section</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/png" href="/assets/asme-srit.png">
     <!-- Browser / Mobile Address Bar Color -->
     <meta name="theme-color" content="#1D4ED8"> <!-- Your site’s blue -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
