--- a/index.html
+++ b/index.html
@@ -161,6 +161,28 @@
                 grid-row: span 1;
             }
         }
+
+        /* marquee animation */
+        @keyframes marquee {
+            0% {
+                transform: translateX(100%);
+            }
+
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+
+        .asme-marquee {
+            animation: marquee 18s linear infinite;
+            will-change: transform;
+        }
+
+        .asme-marquee:focus,
+        .asme-marquee:hover {
+            animation-play-state: paused;
+            /* pause on hover or focus for accessibility */
+        }
     </style>
 </head>
 
@@ -209,6 +231,24 @@
             </div>
         </div>
     </header>
+
+    <!-- 🔹 Marquee Section (Full Width + Sticky) -->
+    <div class="w-full bg-blue-700 text-white sticky top-[72px] z-40">
+        <!-- adjust top-[72px] depending on your navbar height -->
+        <div class="relative overflow-hidden">
+            <div tabindex="0" class="asme-marquee whitespace-nowrap py-2">
+                <span class="inline-block mr-6 font-semibold">
+                    ASME SRIT — TNNOVATE Registration is OPEN!
+                </span>
+                <a href="https://konfhub.com/tnnovate2" target="_blank" rel="noopener noreferrer"
+                    class="inline-block mr-6 underline font-bold focus:outline-none focus:ring-2 focus:ring-white/60">
+                    Click here to Register → TNNOVATE Registration
+                </a>
+                <span class="inline-block mr-6">Hurry up! Limited slots available 🚀</span>
+            </div>
+        </div>
+    </div>
+    <!-- 🔹 End Marquee -->
 
     <!-- Hero Section -->
     <section id="home" class="hero-bg text-white h-screen-90 flex items-center">
@@ -361,8 +401,12 @@
                         </div>
                         <div class="p-6">
                             <h4 class="font-bold text-xl mb-3">ASME TN-NOVATE</h4>
-                            <p class="text-gray-600 mb-4">SDG Based Innovation Project Expo where Innovation meets
-                                Excellence</p>
+                            <p class="text-gray-600 mb-4">
+                                SDG Based Innovation Project Expo where Innovation meets Excellence<br>
+                                Register Now:
+                                <a href="https://konfhub.com/tnnovate2" class="text-blue-800 hover:underline"
+                                    target="_blank"><b>Click Here</b></a>
+                            </p>
                             <div class="flex justify-between items-center">
                                 <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Project
                                     Expo</span>
@@ -381,7 +425,11 @@
                         <div class="p-6">
                             <h4 class="font-bold text-xl mb-3">ASME TN-NOVATE Hackathon</h4>
                             <p class="text-gray-600 mb-4">24-hour hackathon focusing on sustainable engineering
-                                solutions and mechanical innovations.</p>
+                                solutions and mechanical innovations.<br>
+                                Register Now:
+                                <a href="https://konfhub.com/tnnovate2" class="text-blue-800 hover:underline"
+                                    target="_blank"><b>Click Here</b></a>
+                            </p>
                             <div class="flex justify-between items-center">
                                 <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Hackathon</span>
                             </div>
@@ -398,7 +446,7 @@
                         <div class="p-6">
                             <h4 class="font-bold text-xl mb-3">ASME EFX SRIT</h4>
                             <p class="text-gray-600 mb-4">A dynamic tech fest with workshops, competitions, and
-                                networking for young engineers.</p>
+                                networking for young engineers.<br>Coming Soon...!</p>
                             <div class="flex justify-between items-center">
                                 <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Hands-on</span>
                             </div>
